# simulation-haskell

./: CHANGELOG.md  Simulation-Haskell.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: Simulation-Haskell-0.1.0.0-inplace.conf  package.cache
src/: Simulations.hs  Types.hs  Utils.hs
