cabal-version:      2.4
name:               Simulation-Haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             cwjki
maintainer:         cwjki97@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:    Simulations,
                        Types,
                        Utils

    build-depends:    base ^>=4.14.3.0,
                      random
    hs-source-dirs:     src

executable Simulation-Haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      random,
                      Simulation-Haskell
    hs-source-dirs:   app
    default-language: Haskell2010
